# OfflineHQASR

./: .gitattributes  .gitignore  LICENSE  PROMPTS.md  README.md  RELEASE_NOTES.md  TESTING.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  local.properties  proguard-rules.pro
app/src/androidTest/java/com/example/offlinehqasr/data/: TranscriptSearchDaoTest.kt
app/src/androidTest/java/com/example/offlinehqasr/recorder/: TranscriptionPipelineInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/offlinehqasr/data/: AppDb.kt  Dao.kt  Entities.kt
app/src/main/java/com/example/offlinehqasr/export/: ExportUtils.kt
app/src/main/java/com/example/offlinehqasr/recorder/: AudioDeviceSelector.kt  AudioPreprocessor.kt  RecordService.kt  SpeechToTextEngine.kt  TranscribeWork.kt  VoskEngine.kt  WhisperEngine.kt
app/src/main/res/layout/: activity_detail.xml  activity_main.xml  activity_settings.xml  item_detail_header.xml  item_recording.xml  item_segment.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: settings_preferences.xml
docs/: ENHANCEMENT_PLAN.md  MVP_ACTIVITY_PLAN.md  MVP_GAP_ANALYSIS.md  OPEN_QUESTIONS.md  PRODUCT_REQUIREMENTS.md  RECORDING_PIPELINE.md
docs/samples/: sample_markdown_export_structure.md  sample_session.json  sample_session.md
whisper/: README.md
(+28 files in other folders)
